deployment/Kubernetes/overlays/ou/enroll/staging/enroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enroll-ingress
spec:
  tls:
    - hosts:
        - enroll.staging.cs.ou.nl
  rules:
    - host: enroll.staging.cs.ou.nl
